--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,4 @@
-MONGODB_URI=mongodb+srv://yaswanth_jk:jk_litlink932@cluster0.pn3wavp.mongodb.net/litlink_db?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://yaswanth_jk:jk_litlink932@cluster0.pn3wavp.mongodb.net/litlink_db?retryWrites=true&w=majority&appName=\
+
+TOKEN_SECKEY = LITLINK_KEY
+
